@@ -15,7 +15,10 @@
 * Fixed the HTML for bulk capability removal and improved styling.
 * Removed some instances of unnecessary translations.
 * Supplemented several instances of missing code docs.
-* Fixed selected capabilities voided when creating a group failed.
+* Revised the group admin screens to add, edit and remove groups. Several code format improvements and fixes, and fixed instances of missing output escaping in related forms.
+* Fixed selected capabilities were voided when creating a group via the group add admin screen failed.
+* Fixed character escaping in parent selection on the group edit admin screen.
+* Fixed a superfluous closing tag on the group remove admin screen.
 
 = 2.17.0 =
 * WordPress 6.1 compatible.
